fix section 1 gap

--- a/src/components/webdesigns/byggrenovering2/section/bygg2Section.css
+++ b/src/components/webdesigns/byggrenovering2/section/bygg2Section.css
@@ -96,25 +96,31 @@
     padding-top: 0;
   }
 
-  .bygg2section-content h1 {
-    color: #333;
-    padding-top: 4rem;
-    font-size: 1.6rem;
-    font-weight: 300;
-    text-align: center;
-  }
-
   .bygg2section-content {
+    position: relative;
     display: flex;
     flex-direction: column;
 
-    gap: 3rem;
+    gap: 0rem;
     padding: 0;
   }
 
+  .bygg2section-content h1 {
+    color: #fff;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    font-size: 1.6rem;
+    font-weight: 300;
+    text-align: center;
+    z-index: 1;
+  }
+
   .bygg2section-content-text {
+    position: absolute;
     flex: 1;
     width: 100%;
+    height: 100%;
+    margin-top: 0;
 
     display: flex;
     flex-direction: column;
@@ -153,12 +159,17 @@
     padding: 0.6rem;
     margin-right: 2rem;
   }
-  .bygg2section-image {
+  .bygg2section-content-image {
     flex: 1;
+
+    display: flex;
+    padding: 1rem;
   }
 
-  .bygg2section-image img {
+  .bygg2section-content-image img {
+    width: 100%;
+    height: auto;
     aspect-ratio: 1/1;
-    border-radius: 0;
+    border-radius: 2rem;
   }
 }
