--- a/src/components/webdesigns/byggrenovering2/section2/bygg2Section2.css
+++ b/src/components/webdesigns/byggrenovering2/section2/bygg2Section2.css
@@ -139,11 +139,13 @@
     text-align: center;
     font-size: 1rem;
     padding: 1rem 0;
+    padding-top: 2rem;
   }
 
   .bygg2section2-content-text button {
     padding: 1rem 4rem;
     font-size: 1rem;
     margin-top: 0;
+    margin: 2rem 0;
   }
 }
