--- a/src/components/webdesigns/byggrenovering2/section3/bygg2Section3.css
+++ b/src/components/webdesigns/byggrenovering2/section3/bygg2Section3.css
@@ -9,19 +9,19 @@
   justify-content: space-evenly;
   align-items: center;
   margin: 10rem 0;
-  box-shadow: inset 0 100rem 100rem #000000bb;
+  box-shadow: inset 0 100rem 100rem #00000040;
 }
 
 .bygg2section3 h1 {
-  color: #f87104;
+  color: #fff;
   text-align: center;
   font-size: 2.4rem;
   font-weight: 500;
 }
 .bygg2section3 p {
-  color: #f87104;
+  color: #fff;
   text-align: center;
-  font-size: 1.6rem;
+  font-size: 1.8rem;
   font-weight: 400;
   width: 80%;
 }
@@ -47,7 +47,6 @@
     justify-content: space-evenly;
     align-items: center;
     margin: 0;
-    box-shadow: inset 0 100rem 100rem #000000bb;
     padding: 2rem 1rem;
   }
 
